--- a/src/styles/Header.scss
+++ b/src/styles/Header.scss
@@ -1,10 +1,16 @@
 .navbar-bar{
-  img{
-    max-width: 40px;
-    max-height: 40px;
-  }
-  a{
-    color: azure;
-    text-decoration: none;
-  }
-}
+    img{
+      max-width: 40px;
+      max-height: 40px;
+    }
+    a{
+          color: azure;
+          text-decoration: none;
+        }}
+// .nav{
+// min-width: 600px;
+// max-width: none;
+// }
+// 
+//   
+// }
