--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -1,5 +1,25 @@
+.home{
+}
 .home div{
   border: 5px solid black;
-  border-radius: 10px;
-  max-width: 50%;
+  border-radius: 10%;
+  animation: pulse 2s infinite;
+}
+
+
+@keyframes pulse {
+	0% {
+		transform: scale(0.95);
+		box-shadow: 0 0 0 0 rgba(0, 0, 0, 0.7);
+	}
+
+	70% {
+		transform: scale(1);
+		box-shadow: 0 0 0 10px rgba(255, 0, 0, 0);
+	}
+
+	100% {
+		transform: scale(0.95);
+		box-shadow: 0 0 0 0 rgba(255, 0, 0, 0);
+	}
 }
