--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,4 +3,7 @@
 @import './Opener.scss';
 @import './Home.scss';
 @import './Contact.scss';
-@import './Projects.scss'
+@import './Projects.scss';
+@import 'bootstrap/dist/css/bootstrap.css';
+@import 'bootstrap/dist/css/bootstrap.min.css';
+@import 'bootstrap'
