--- a/src/styles/Opener.scss
+++ b/src/styles/Opener.scss
@@ -1,5 +1,10 @@
 .opener{
+
   a{
+    text-decoration: none;
+    color: azure;
+  }
+  a:hover{
     text-decoration: none;
     color: azure;
   }
@@ -7,7 +12,16 @@
     border-radius: 20px;
   }
   img{
-    max-width: 300px;
-    max-height: 300px;
+    max-width: 600px;
+    max-height: 600px;
   }
+}
+@media (max-width: 380px ){
+  .opener{
+    img{
+    
+    max-width: 100%;
+    max-height: 100%;
+  }
+}
 }
