--- a/src/styles/Contact.scss
+++ b/src/styles/Contact.scss
@@ -1,4 +1,6 @@
-
+.contact{
+  margin-top: 8%;
+}
 .boxes {
   img{
     max-width: 70px;
@@ -9,7 +11,7 @@
   .contact{
     flex-direction: column;
     justify-content: space-around;
-    margin-bottom: 80px;
+    margin: 0% 25% 15% 25%
   }
   
 }
