--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,9 +1,51 @@
+
+@font-face {
+  font-family: 'xengalaxy';
+  src: URL('../fonts/XenGalaxy-28jv.ttf') format('truetype');
+}
+@font-face {
+  font-family: 'pressstart';
+  src: URL('../fonts/PressStart2P-Regular.ttf') format('truetype');
+}
+
+@font-face {
+  font-family: 'introfont';
+  src: URL('../fonts/ChunkFive-Regular.otf') format('truetype');
+}
+
+
 * {
   box-sizing: border-box;
 }
 
-body { 
-  background: linear-gradient(to right, black, black);
+body {
+  background: radial-gradient(ellipse at bottom, #22222A 0%, #22222A 0%);
+  color: azure;
+}
+
+/* --------------------BACKGROUND-------------------- */
+.star {
+  background: url(../Images/stars.png);
+  background-repeat: repeat;
+  z-index: -1;
+  height: 2000%;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  display: block;
+  position: absolute;
+  animation: 400s twinkle linear infinite;
+}
+
+/*Moving stars */
+@keyframes twinkle {
+  from {
+    background-position: 0 0;
+  }
+  to {
+    background-position: -2000px 5000px;
+  }
 }
 
 /* -------------------- HEADER ------------------- */
@@ -12,16 +54,25 @@ body {
   width: 50%;
   padding: 0;
 }
-.header a {
-  padding-top: 3%;
-    display: inline-block;
-    width: 25%;
-    margin: 0;
-    text-decoration: none;
-    color: azure;
+
+.navbar {
+  z-index: 7;
 }
+
+.header a {
+  font-size: 25px;
+  padding-top: 3%;
+  display: inline-block;
+  width: 25%;
+  margin: 0;
+  text-decoration: none;
+  font-weight: 300;  
+  background: -webkit-linear-gradient(white, #38495a);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+
 .header ul li {
-  
   margin: 0;
   display: inline;
   text-align: center;
@@ -29,27 +80,31 @@ body {
   justify-content: center;
 }
 
-.underline { 
+.underline {
   width: 25%;
-  border-radius: 50%;
-  border-bottom: 5px solid #1155cc;
+  border-style: solid;
+  border-width: 2px;
+  border-image: radial-gradient(ellipse at bottom, #ffffff 0%, #000000 100%) 1;
   transition: .4s ease-in-out;
-  
 }
+
 .one:hover a, .two:hover a, .three:hover a, .four:hover a, .fives:hover a {
-color: azure;
+  color: azure;
 }
+
 .two:hover ~ .underline {
   margin-left: 25%;
-  border-bottom: 5px solid #1155cc;
+  border-bottom: 2px solid;
 }
+
 .three:hover ~ .underline {
   margin-left: 50%;
-  border-bottom: 5px solid #1155cc;
+  border-bottom: 2px solid;
 }
+
 .four:hover ~ .underline {
   margin-left: 75%;
-  border-bottom: 5px solid #1155cc;
+  border-bottom: 2px solid;
 }
 
 @media (max-width: 380px) {
@@ -62,30 +117,110 @@ color: azure;
   }
 }
 
+/* ----------------------HOME----------------------- */
+.icons {
+  margin: 5%;
+}
+.icons a  {
+  margin: 5%;
+  z-index: 6;
+}
+.icons img {
+  width: 8%;
+}
+svg {
+  margin: 2%;
+  width: 8%;
+}
+.main-title {
+  margin-top: 2;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+.title {
+  text-align: center;
+  letter-spacing: 10px;
+}
+.hello{
+  font-size: 35px;
+}
+.normal-text, .hello{
+    background: -webkit-linear-gradient(white, #38495a);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
 
+.nameintro {
+  font-size: 45px;
+  margin-top: 5%;
+}
+.nameintro2{
+  font-size: 45px;
+  margin-top: 3%;
+}
 
+.profile-photo img {
+  border-radius: 50%;
+  margin-bottom: 5%;
+  width: 50%;
+  position: relative;
+}
 
+/* ---------------------------ABOUT------------------- */
 
+.section{
+  margin-top: 10%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
 
-.star {
-  background: url(../Images/stars.png) repeat top center;
-  z-index: 0;
+.generalwrapper{
+  border-radius: 20px;
+  background-color: #38495a69;
   height: 100%;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  display: block;
-  position: absolute;
-  animation: 400s twinkle linear infinite;
+  width: 60%;
 }
 
-/*Moving stars */
-@keyframes twinkle {
-  from { background-position: 0 0;}
-  to {background-position: -2000px 5000px;}
+.generalwrapper p{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background: -webkit-linear-gradient(white, white);
+  -webkit-background-clip: text;
+  margin: 3%;
 }
 
-.hugebox{
-  height: 200px;
+
+
+/* ---------------MEDIA FOR PHONE/XL Phones MAX 420px ------------------ */
+
+
+/* ----HOME------- */
+@media (max-width: 420px){
+  .header {
+    width: 100%;
+  }
+  .header a {
+    font-weight: bold;
+    font-size: small;
+  }
+  .hello, .nameintro, .nameintro2 {
+    font-size: medium;
+  }
+  .nameintro {
+    margin-top: 6%;
+  }
+  .nameintro2{
+    margin-top: 4%;
+  }
+  .generalwrapper{
+    font-size: smaller;
+    width: 90%;
+  }
 }
