some link fixes and styling

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -248,6 +248,14 @@
     justify-content: space-between;
     align-items: center; 
   }
+
+  .introproject .buttons a {
+    color: white;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+  }
+  
   .section{
     margin-top: 10%;
     display: flex;
