--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -29,7 +29,7 @@
     background-repeat: repeat;
     z-index: -1;
     width: 100%;
-    height: 480%;
+    height: 430%;
     top: 0;
     bottom: 0;
     left: 0;
@@ -221,7 +221,7 @@
   text-align: center;
   }
 #skillsused {
-  margin: 5%;
+  /* margin: 5%; */
   flex-wrap: wrap;
   display: flex;
   flex-direction: row;
@@ -251,7 +251,6 @@
 
   .introproject .buttons a {
     color: white;
-    font-weight: bold;
     text-align: center;
     text-decoration: none;
   }
@@ -306,7 +305,7 @@
 
   @media only screen and (max-width: 1100px) {
     .star{
-      height: 400%;
+      height: 350%;
     }
     #myBtn {
       opacity: 60%;
