--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -83,9 +83,9 @@
 
   .underline {
     width: 25%;
-    border-style: solid;
-    border-width: 2px;
-    border-image: radial-gradient(ellipse at bottom, #ffffff 0%, #000000 100%) 1;
+    border: 2px solid;
+    border-radius: 10px;
+    border-image: radial-gradient(ellipse at bottom, #ffffff 0%, #0000001c 100%) 1;
     transition: .4s ease-in-out;
   }
 
@@ -155,6 +155,7 @@
   }
 
   .generalwrapper p{
+    font-size: 20px ;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -221,7 +222,6 @@
   text-align: center;
   }
 #skillsused {
-  /* margin: 5%; */
   flex-wrap: wrap;
   display: flex;
   flex-direction: row;
@@ -335,8 +335,10 @@
       margin-top: 4%;
     }
     .generalwrapper{
+      width: 90%;
+    }
+    .generalwrapper p{
       font-size: smaller;
-      width: 80%;
     }
     .project{
       flex-direction: column;
