--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -221,7 +221,18 @@
   align-items: center;
   text-align: center;
   }
+
+#skillsusedp1{
+  margin: 3%;
+  display: flex;
+  flex-wrap: nowrap;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
 #skillsused {
+  margin: 3%;
   flex-wrap: wrap;
   display: flex;
   flex-direction: row;
@@ -230,7 +241,7 @@
   text-align: center;
   }
 
-  #skillsused div {
+  #skillsused div, #skillsusedp1 div {
     color: azure;
     margin: 1%;
     padding: 2%;
