--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -189,6 +189,7 @@
   }
   .icons img {
     width: 8%;
+    margin: 2%;
   }
   svg {
     margin: 2%;
@@ -205,6 +206,7 @@
     display: none;
   }
   #rightpic{
+    
     display: flex;
   }
   .project{
@@ -220,7 +222,7 @@
     border-radius: 10px;
   }
   .introproject{
-    margin: 2%;
+  margin: 2%;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -257,7 +259,7 @@
 
   .introproject p {
     color: white;
-    text-align: center;
+    text-align: justify;
     margin: 3%;
   }
   .introproject .buttons {
